# nudging

./: .flake8  .gitignore  .pylintrc  CHANGES.rst  LICENSE  README.md  check_data.py  check_info.py  config.yaml  create_data_dirs.py  data.dvc  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: on_pull_request.yml
data/: .gitignore  Database search_OPEN DATA_Precision Nudging.xlsx  external.dvc
docs/: combining_data.md  methods.md  probabilistic_model.md  simulations.md  simulations_supplementary.md
examples/: Tutorial.ipynb  clustering.ipynb  milkman.ipynb  partition.ipynb  simulation-10features.ipynb  simulation-new-and-fast.ipynb  simulation.ipynb  simulation_different_models.ipynb  simulation_different_models_outcome.ipynb  simulation_multidata.ipynb  test_real_data.ipynb  tutorial.csv  tutorial.ipynb  utils.py
nudging/: cate.py  check_data.py  cluster.py  correlation.py  evaluate.py  evaluate_outcome.py  mixed_features.py  multidata.py  parallel.py  partition.py  predict.py  prepare.py  propensity_score.py  train.py  utils.py
nudging/dataset/: __init__.py  balaban.py  base.py  file.py  hotard.py  lieberoth.py  real.py  (+5 more)
src/: check_data.py  check_info.py  classifier_nb.py  convert_16.py  convert_all.py  convert_data_11.py  convert_data_13.py  convert_data_16.py  create_data_dirs.py  evaluate.py  get_success.py  nudge_probability.py  nudge_success.py  predict.py  prepare.py  propensity_score.py  train.py  utils.py
tests/: test_cate.py  test_correlation.py  test_evaluate.py  test_models.py  test_propensity_score.py  test_simulation.py
(+58 files in other folders)
