[tool.poetry]
name = "nudging-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.2.4"
numpy = "^1.20.2"
openpyxl = "^3.0.7"
scipy = "^1.6.2"
h5py = "^3.2.1"
pyreadstat = "^1.1.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
